# ai_project_template

./: Cargo.toml  MIGRATION_TO_RUST.md  README.md  create_project.py  log_manifest.ai.md  manifest.ai.md  prompt_auditor.md  prompt_cursor_skeleton.md  prompt_expert.md
.github/workflows/: release.yml
ProjectCreator/: App.axaml  App.axaml.cs  BusyWindow.axaml  BusyWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  Program.cs  ProjectCreator.csproj
__deprecated__excel_to_csv/: audit_report.md  changelog.md  cursor_prompt.md  limits.md  manifest.ai.md  plan.md  questions.md  run_log.txt
__deprecated__excel_to_csv/code/: inspect_xlsx.py
__deprecated__excel_to_csv/data_in/: shopify_orders_20250918_202022.xlsx
__deprecated__excel_to_csv/data_out/: shopify_orders_20250918_202022.csv
__deprecated__excel_to_csv/tests/: test_convert.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GLOSSARY.md  PRESETS.md  QUICK_START.md  README.md  USER_GUIDE.md
excel_to_csv/: README.md  __init__.py  audit_report.md  cursor_prompt.md  log_manifest.ai.md  manifest.ai.md  plan.md  prompt_auditor.md  pytest.ini  questions.md  run_pipeline.py  test_report.md
excel_to_csv/code/: __init__.py  convert_xlsx_to_csv.py  generate_shopify_excel.py  process_shopify_orders.py
excel_to_csv/data_in/: shopify_orders_20250929_220624_864969.xlsx  shopify_orders_20250929_220631_974834.xlsx  shopify_orders_20250929_220638_009044.xlsx
excel_to_csv/tests/: test_io.py  (+5 more)
scripts/: generate_shopify_excel.py  generate_shopify_excel.sh
src/: command.rs  main.rs  presets.rs
(+6 files in other folders)
