[package]
name = "ai_project_template"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
regex = "1"
anyhow = "1"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
zip = "0.6"
directories = "5.0"
chrono = "0.4"
notify-rust = "4.10"
